# browhere

./: .env.local.example  .gitignore  PLAN.md  README.html  README.md  architecture-flow.html  index.html  next.config.ts  package-lock.json  package.json  playwright.config.ts  skills-lock.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
.kiro/steering/: roadmap.md
app/: desktop.ts  layout.tsx  page.test.tsx  page.tsx  styles.css  useBrowhereController.ts
app/components/: IndexPanel.tsx  SearchPanel.tsx
app/search/: page.tsx
docs/: desktop-verification.md
lib/: config.ts  types.ts
lib/ai/: gemini.test.ts  gemini.ts  groq.test.ts  groq.ts
lib/files/: discovery.test.ts  discovery.ts  exclusions.test.ts  exclusions.ts  extraction.test.ts  extraction.ts
lib/indexer/: indexer.test.ts  indexer.ts  state.ts
lib/search/: retrieval-eval.test.ts  search.test.ts  search.ts
lib/storage/: repository.test.ts  repository.ts
scripts/: package-next-runtime.mjs
src/: main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/placeholder-dist/: index.html
src-tauri/src/: file_actions.rs  lib.rs  main.rs  search_engine.rs
src/app/: App.test.tsx  App.tsx  AppProviders.tsx
src/components/: IndexSettingsPanel.test.tsx  IndexSettingsPanel.tsx  ResultItem.tsx  ResultList.test.tsx  ResultList.tsx  SearchBox.tsx  SearchStatusView.test.tsx  SearchStatusView.tsx
src/data/: placeholderResults.ts
src/desktop/: DesktopFileActions.test.ts  DesktopFileActions.ts  nativeSettings.ts  tauriFileActions.ts
src/search/: LocalPlaceholderSearchProvider.test.ts  LocalPlaceholderSearchProvider.ts  SearchController.test.ts  SearchController.ts  SearchProvider.test.ts  SearchProvider.ts  (+1 more)
tests/: desktop-search-shell.spec.ts  rag-search.spec.ts
(+86 files in other folders)
