[package]
name = "browhere"
version = "0.1.0"
description = "Local-first desktop search shell"
authors = ["Browhere"]
edition = "2021"

[lib]
name = "browhere_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "=2.0.0", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
tauri = { version = "=2.0.0", features = [] }
