[package]
name = "browhere"
version = "0.1.0"
description = "Local-first desktop search shell"
authors = ["Browhere"]
edition = "2021"

[lib]
name = "browhere_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "=2.0.0", features = [] }

[dependencies]
base64 = "0.22"
keyring = { version = "3", features = ["apple-native", "windows-native"] }
lopdf = "0.35"
quick-xml = "0.37"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlite-vec = "0.1.9"
tauri = { version = "=2.0.0", features = [] }
tauri-plugin-dialog = "2"
zip = { version = "2", default-features = false, features = ["deflate"] }
