[package]
name = "browhere"
version = "0.1.0"
description = "Local-first semantic file search for macOS"
authors = ["Browhere"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "browhere_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "=2.4.1", features = [] }

[dependencies]
tauri = { version = "=2.8.5", features = [] }
tauri-plugin-global-shortcut = { version = "=2.3.0" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
